--- a/public/sites/all/modules/calendar/css/calendar_multiday.css
+++ b/public/sites/all/modules/calendar/css/calendar_multiday.css
@@ -1,3 +1,4 @@
+
 /**
  * calendar calendar table styles
  */
@@ -16,7 +17,12 @@
   padding: 0;
   margin: 0;
   width: 100%;
+  border:1px solid #959595;
+  border-top:0px;
 }
+
+.calenderHolder table {
+  width: 214px !important;}
 
 /**
  * IE needs a little help to get the side by side tables to the right size
@@ -35,7 +41,7 @@
 .calendar-calendar tr {
   padding: 0;
   margin: 0;
-  background-color: white;
+  background-color: #f4f4f4;
 }
 .calendar-calendar th {
   text-align: center;
@@ -46,7 +52,6 @@
 }
 .calendar-calendar td {
   width: 14%;
-  border: 1px solid #ccc;
   color: #777;
   text-align: right;
   vertical-align: top;
@@ -58,7 +63,7 @@
  * simplify the mini calendar by removing borders
  */
 .calendar-calendar .mini {
-  border: none;
+
 }
 
 /**
@@ -112,7 +117,6 @@
  */
 .calendar-calendar th.days {
   color: #ccc;
-  background-color: #224;
   text-align: center;
   padding: 1px;
   margin: 0;
@@ -177,20 +181,24 @@
 table td.mini,
 table th.mini,
 table.mini td.week {
-  padding: 0 1px 0 0;
   margin: 0;
   }
 table td.mini a {
   font-weight: normal;
+  font-size:12px;
 }
 .calendar-calendar .mini-day-off {
   padding: 0px;
+  
 }
 .calendar-calendar .mini-day-on {
   padding: 0px;
+  color:#fff;
+  text-align:center;
 }
 table .mini-day-on a {
-  text-decoration: underline;
+	color:#fff;
+	display:block;
 }
 .calendar-calendar .mini .title {
   font-size: .8em;
@@ -239,6 +247,7 @@ table.calendar-legend tr.even .stripe {
 .calendar-empty {
   font-size: 1px;
   line-height: 1px;
+  display:none;
 }
 
 /**
@@ -317,10 +326,10 @@ table.calendar-legend tr.even .stripe {
   text-decoration: none;
 }
 .calendar-calendar th.days {
-  background-color: #eee;
   color: #777;
   font-weight: bold;
-  border: 1px solid #ccc;
+  font-size: 9px;
+  padding: 4px 0;
 }
 .calendar-calendar td.empty {
   background: #ccc;
@@ -391,7 +400,25 @@ table.calendar-legend tr.even .stripe {
 .calendar-calendar td.past {}
 .calendar-calendar td.future {}
 .calendar-calendar td.has-events {}
-.calendar-calendar td.has-no-events {}
+.calendar-calendar td.has-events div { background:#ed1c24; border:1px solid #821818; padding: 5px 0; padding: 7px 0; height: 15px; }
+.calendar-calendar td.has-no-events div { 
+background: #ededed; /* Old browsers */
+background: -moz-linear-gradient(top,  #ededed 1%, #dedede 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#ededed), color-stop(100%,#dedede)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #ededed 1%,#dedede 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #ededed 1%,#dedede 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #ededed 1%,#dedede 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #ededed 1%,#dedede 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', endColorstr='#dedede',GradientType=0 ); /* IE6-9 */
+text-align:center;
+border-top:1px solid #fff;
+border-bottom:1px solid #bbb;
+border-left:1px solid #fff;
+border-right:1px solid #bbb;
+padding: 6px 0;
+font-size: 14px;
+line-height: 17px;
+}
 
 /**
  * Multi day styles
@@ -748,7 +775,6 @@ table.calendar-legend tr.even .stripe {
 
 .view .date-nav-wrapper  {
   position: relative;
-  margin-top: 5px;
   width: 100%;
 }
 
@@ -765,8 +791,9 @@ table.calendar-legend tr.even .stripe {
 .view .date-nav-wrapper .date-prev a,
 .view .date-nav-wrapper .date-next a {
   text-decoration: none;
-  color: inherit;
   font-size: 12px;
+    text-shadow: none;
+    color: #fff !important;
 }
 
 .view .date-nav-wrapper.date-nav a:hover {
@@ -776,14 +803,12 @@ table.calendar-legend tr.even .stripe {
 .view .date-nav-wrapper .date-prev {
   -moz-border-radius: 5px 0 0 5px;
   border-radius: 5px 0 0 5px;
-  background: none repeat scroll 0 0 #dfdfdf;
   float: none;
   padding: 5px 0;
   position: absolute;
-  right: 60px;
-  left: auto;
+  left: 0px;
   text-align: right;
-  top: 0px;
+  top: -3px;
   width: auto;
   z-index: 1;
   font-size: 12px;
@@ -808,20 +833,24 @@ table.calendar-legend tr.even .stripe {
 }
 
 .view .date-nav-wrapper .date-heading h3 {
-  line-height: 30px;
-  font-size: 1.7em;
+  line-height: 22px;
+  font-size: 14px;
+}
+
+.view .date-nav-wrapper .date-heading h3 a {
+	color:#fff !important;
+	text-decoration:none;
 }
 
 .view .date-nav-wrapper .date-next {
   -moz-border-radius: 0px 5px 5px 0px;
   border-radius: 0px 5px 5px 0px;
-  background: none repeat scroll 0 0 #dfdfdf;
   float: none;
   padding: 5px 0;
   position: absolute;
   right: 0px;
   text-align: right;
-  top: 0px;
+  top: -3px;
   width: auto;
   z-index: 1;
   font-size: 12px;
@@ -874,3 +903,11 @@ ul.calendar-links,
   background-color: #DFDFDF;
   min-height: 20px;
 }
+
+.calenderHolder .view-header { width:210px; height:36px; background:#f00; border:1px solid #9b0003; }
+.calenderHolder ul.pager li { list-style:none; }
+.calenderHolder { width:212px; height:207px }
+
+#block-views-schedule-block-1 .view-header { width:210px; height:36px; background:#f00; border:1px solid #9b0003; }
+#block-views-schedule-block-1 ul.pager li { list-style:none; }
+#block-views-schedule-block-1  { width:212px; height:207px; margin: 0px 4px 0px 15px; }
