--- a/public/sites/all/modules/views/css/views.css
+++ b/public/sites/all/modules/views/css/views.css
@@ -1,6 +1,6 @@
 .views-exposed-form .views-exposed-widget {
   float: left; /* LTR */
-  padding: .5em 1em 0 0; /* LTR */
+  /* padding: .5em 1em 0 0; */
 }
 
 .views-exposed-form .views-exposed-widget .form-submit {
